# sticky-net

./: .env.test  .firebaserc  .gitignore  Dockerfile  FIX.md  HACKATHON_WIN_PLAN.md  README.md  cloudbuild.yaml  deploy-quick.sh  docker-compose.yml  firebase.json  pyproject.toml  requirements.txt  tester_results.json
.github/: copilot-instructions.md
config/: settings.py
conversation-testing/: log.txt  suggestion-2.md  suggestion-3.md  suggestion-4.md  suggestion-5.md  suggestion.md
docs/: ALL_FIXES_SUMMARY.md  ARCHITECTURE.md  CHAT_CONTEXT_SUMMARY.md  COMPLETE_FLOW.md  DEPLOYMENT_VERIFICATION.md  DOCUMENTATION-UPDATE.md  EVALUATION_REPORT.md  GK_TESTING_REPORT.md  HACKATHON_EVALUATION_LOG_ANALYSIS.md  HARDCODING.md  Honeypot API Evaluation System Documentation Updated - feb 19.md  IMPROVEMENT_ANALYSIS.md  MASTER_PROJECT_MAP.md  SUBMISSION.md  Scam_Detection_API_Endpoint_Resubmission.md  VISUAL_DESIGN_SPEC.md
final-submission-docs/: EVAL_SYS.md  SAMPLE_CASE.md
final-testing/: __init__.py  conftest.py  scoring_helpers.py  test_callback_send.py  test_extraction_validation.py  test_priority0_callback_fixes.py  test_priority1_high_impact.py  test_priority2_optimization.py  test_scoring_integration.py  test_session_state.py
frontend/: .env.development  .env.production  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
india-map/: package.json
logs/: logs_all.json  logs_analysis_output.txt  logs_final_analysis.txt  logs_raw.json
multi-turn-testing/: RESPONSE_TIME_COMPARISON.md  TEST_RESULTS.md  all_test_cases_res_final.txt  (+10 more)
(+524 files in other folders)
